crates/plotnik-tests/tests/04-emit/types/recursion/error_repetition_capture_in_recursive_cycle.txt
A = {
  (expression_statement)
  (statement_block
    (B)* @xs
  )? @blk
}

B = {
  (debugger_statement)
  (statement_block (A))?
}
------------------ DIAGNOSTICS -------------------
error: one repeat of this `*` group doesn't match exactly one node, so there is no single node to bind per element
 --> query.ptk:4:5
  |
4 |     (B)* @xs
  |     ^^^^
  |
help: add internal captures: `{(a) @a (b) @b}* @items`
